tests/negative/ImportCycle/B.mjuvix
module B;

import C;

end;
